# pyDSvDCAPI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: compliance-open-topics.md  device-splitting-guidelines.md  dss-configurator-ui-composition.md  dss-vdc-behavior.md  model-features-auto-assignment.md  p44vdc-comparison.md  vdc-db-device-catalogue.md
examples/: developer_guide_demo.py  experiment_state_approaches.py  mock_devices.py  query_dss_sonos_properties.py  realworld_demo.py  realworld_test_vdc-host.py  realworld_test_vdc.py  realworld_test_vdsd.py  realworld_test_vdsd_with_binaryInput.py  realworld_test_vdsd_with_button.py  realworld_test_vdsd_with_output.py  realworld_test_vdsd_with_scenes.py  realworld_test_vdsd_with_sensor.py  realworld_test_vdsd_with_states_and_props.py  simulation_demo.py  test_gtin_1234_dynamic.py  test_matrix_dynamic.py  test_minimal_device.py  wire_debug_test.py
examples/gpt/: example_vdc.py  mock_devices.py
pyDSvDCAPI/: __init__.py  actions.py  binary_input.py  button_input.py  connection.py  conversion.py  device_event.py  device_property.py  device_state.py  dsuid.py  enums.py  genericVDC.proto  genericVDC_pb2.py  genericVDC_pb2.pyi  output.py  output_channel.py  property_handling.py  sensor_input.py  session.py  vdc.py  vdc_host.py  vdsd.py
src/pydsvdcapi/: __init__.py  actions.py  binary_input.py  button_input.py  connection.py  device_event.py  device_property.py  device_state.py  device_template.py  dsuid.py  enums.py  genericVDC_pb2.pyi  output.py  output_channel.py  persistence.py  property_handling.py  sensor_input.py  session.py  vdc.py  vdc_host.py  vdc_messages.proto  vdc_messages_pb2.py  vdc_messages_pb2.pyi  vdcapi.proto  vdcapi_pb2.py  vdcapi_pb2.pyi  vdsd.py
tests/: test_actions.py  test_auto_save.py  test_binary_input.py  test_button_input.py  test_connection.py  test_control_values.py  test_device_event.py  test_device_property.py  test_device_state.py  test_device_template.py  test_dsuid.py  test_output.py  test_output_channel.py  test_persistence.py  test_property_handling.py  test_pydsvdcapi.py  test_sensor_input.py  test_session.py  test_tcp_integration.py  test_vdc.py  test_vdc_host.py  test_vdc_host_persistence.py  test_vdsd.py
