[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyDSvDCAPI"
version = "0.1.0"
description = "Python library for the DSvDC API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/KarlKiel/pyDSvDCAPI"
Issues = "https://github.com/KarlKiel/pyDSvDCAPI/issues"
